# programdb

./: build.sh  pyproject.toml  requirements.txt
coaches/: admin.py  models.py
coaches/migrations/: 0001_initial.py
mysite/: settings.py  urls_public.py  views.py
players/: admin.py  models.py
players/migrations/: 0001_initial.py
programs/: admin.py  models.py
programs/migrations/: 0001_initial.py
static/css/: welcome_page.css
templates/: welcome_page.html
tenants/: admin.py  forms.py  models.py  signals.py
tenants/management/commands/: populate_db.py
tenants/migrations/: 0001_initial.py
