[project]
name = "programdb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-filter>=25.2",
    "django-import-export>=4.4.1",
    "django-multi-tenants>=0.1.3.3",
    "django-tenant-users>=2.2.1",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise[brotli]>=6.12.0",
]
